meme maker using an API > 1st commit

--- a/src/main.css
+++ b/src/main.css
@@ -7,6 +7,11 @@
 body{
     font-family: 'Karla' Arial,sans-serif;
 }
+.flex{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 .main{
     padding: 36px;
 }
